# XpandrLink

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  FEATURES.md  README.md  ROADMAP.md  SPEC.md  XpandrLink-User-Guide.md
.github/workflows/: build.yml
Reference/: README.md
Resources/: InitPatch.syx
XpandrLink/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
XpandrLink/Source/Data/: OberheimDefs.h  PatchBlender.h  PatchCodec.h  PatchLibrary.cpp  PatchLibrary.h  PatchMorpher.h  PatchRandomizer.h  TimbreSpaceEngine.h  TimbreTypes.h  XpanderData.h
XpandrLink/Source/Engine/: IMidiBackend.h  MidiEngine.cpp  MidiEngine.h  MidiSendQueue.cpp  MidiSendQueue.h  SynthDefs.h
XpandrLink/Source/Plugin/: XpandrLinkAudioProcessor.cpp  XpandrLinkAudioProcessor.h  XpandrLinkAudioProcessorEditor.cpp  XpandrLinkAudioProcessorEditor.h  XpandrLinkParameters.h
XpandrLink/Source/Tabs/: EditorTabComponent.cpp  EditorTabComponent.h  LibraryTabComponent.cpp  LibraryTabComponent.h
XpandrLink/Source/Tests/: BUG01_KnobColDecodeTest.h  BUG05_ProgramChangeSysexTest.h  ChangeModulationSourceTest.h  FullModMatrixSlotTest.h  IDSourceTrackingTest.h  InitPatchLoadTest.h  MidiEngineCharacterizationTest.h  MidiEngineSendPathTest.h  MidiOutputAutoSelectTest.h  MockMidiBackend.h  ModAmountCoalesceTest.h  ModEditDecodeTest.h  PatchBlenderTest.h  PatchRandomizerSafetyTest.h  TestMain.cpp  TimbreSpaceEngineTest.h
XpandrLink/Source/UI/: AdvancedParamsPanel.h  BottomPaneManager.h  CcMapPanel.h  EnvelopeGraph.h  FilterGraph.h  FmLagPanel.h  FullModMatrixPanel.cpp  FullModMatrixPanel.h  GroupTabPanel.h  HardwareButtonLookAndFeel.h  HardwareComponents.cpp  HardwareComponents.h  MidiSettingsPanel.h  ModAmountEditor.h  ModAssignmentLogic.h  ModSourceButton.h  ModSummaryPanel.cpp  ModSummaryPanel.h  ModulePanel.cpp  ModulePanel.h  MorphPanel.h  OberheimLookAndFeel.h  PatchBrowser.h  PatchBrowserPanel.cpp  PatchBrowserPanel.h  RampRatesPanel.h  RandomizerPanel.h  RndMorphPanel.h  ThemeData.h  TimbreSpacePanel.cpp  TimbreSpacePanel.h  TitleBarComponent.cpp  TitleBarComponent.h  TrackingGraph.h  VoiceArchitectureComponent.h
docs/: NFR.md  TEST-PLAN.md  win-sysex-fix.md
docs/adr/: 001-scratchpad-slot-safety.md  002-engine-state-atomics.md  003-timer-pacing-coalescing.md  004-hardware-update-guard.md  005-subpage-paramcol-collision.md  006-changesource-atomic-edit.md  007-activeoutput-locking-invariant.md  008-timbre-space-self-contained-layout.md  README.md
docs/plans/: 2026-07-16-code-quality-improvement-plan.md
packaging/: macsetup_XpandrLink.command  winsetup_XpandrLink.bat
